API testing for player schema

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "set NODE_ENV=test && mocha test/routes/teams-test.js"
+    "test": "set NODE_ENV=test && mocha test/routes/players-test.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
